sentiment, category and keyword analysis with Mistral model

--- a/reviews_analytics/run_analysis.ipynb
+++ b/reviews_analytics/run_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -34,7 +34,7 @@
        " 'overall_score': 8.3}"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +210,7 @@
        "4  Staff was friendly, but not always where I exp...                 True  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -487,7 +487,7 @@
        "[2999 rows x 11 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -520,6 +520,183 @@
     "hotel_reviews_data.loc[hotel_reviews_data['review_poor'].str.contains('nothing|nil|niks|Niets|-', case=False, na=False), 'review_poor'] = pd.NA\n",
     "\n",
     "hotel_reviews_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>review_title</th>\n",
+       "      <th>date_stay</th>\n",
+       "      <th>review_text</th>\n",
+       "      <th>true_label</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>127</th>\n",
+       "      <td>we enjoyed our visit to the Student Hotel and ...</td>\n",
+       "      <td>10-2021</td>\n",
+       "      <td>water problem at the shower</td>\n",
+       "      <td>negative</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>The concept and the location are amazing, but ...</td>\n",
+       "      <td>08-2023</td>\n",
+       "      <td>The beds are very uncomfortable, the pillows a...</td>\n",
+       "      <td>negative</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>210</th>\n",
+       "      <td>Pleasant</td>\n",
+       "      <td>08-2022</td>\n",
+       "      <td>After we saw the lobby we had high expectation...</td>\n",
+       "      <td>negative</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>134</th>\n",
+       "      <td>Good choice in Groningen</td>\n",
+       "      <td>08-2021</td>\n",
+       "      <td>Lack of elevators. Only one per building. And ...</td>\n",
+       "      <td>negative</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>130</th>\n",
+       "      <td>Excellent</td>\n",
+       "      <td>08-2021</td>\n",
+       "      <td>Breakfast in room attracted some expenses whic...</td>\n",
+       "      <td>negative</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>138</th>\n",
+       "      <td>Good location</td>\n",
+       "      <td>08-2021</td>\n",
+       "      <td>The location was really good, also the overall...</td>\n",
+       "      <td>positive</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>231</th>\n",
+       "      <td>Excellent hotel with great staff!</td>\n",
+       "      <td>01-2022</td>\n",
+       "      <td>The room was very clean and there were some fr...</td>\n",
+       "      <td>positive</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>240</th>\n",
+       "      <td>Exceptional</td>\n",
+       "      <td>08-2021</td>\n",
+       "      <td>The hotel is just amazing! Every little detail...</td>\n",
+       "      <td>positive</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>129</th>\n",
+       "      <td>Very good</td>\n",
+       "      <td>09-2021</td>\n",
+       "      <td>Very close to centre of town and university</td>\n",
+       "      <td>positive</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>191</th>\n",
+       "      <td>Pleasant</td>\n",
+       "      <td>10-2022</td>\n",
+       "      <td>Location/vibe</td>\n",
+       "      <td>positive</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>100 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                          review_title date_stay  \\\n",
+       "127  we enjoyed our visit to the Student Hotel and ...   10-2021   \n",
+       "28   The concept and the location are amazing, but ...   08-2023   \n",
+       "210                                           Pleasant   08-2022   \n",
+       "134                           Good choice in Groningen   08-2021   \n",
+       "130                                          Excellent   08-2021   \n",
+       "..                                                 ...       ...   \n",
+       "138                                      Good location   08-2021   \n",
+       "231                  Excellent hotel with great staff!   01-2022   \n",
+       "240                                        Exceptional   08-2021   \n",
+       "129                                          Very good   09-2021   \n",
+       "191                                           Pleasant   10-2022   \n",
+       "\n",
+       "                                           review_text true_label  \n",
+       "127                        water problem at the shower   negative  \n",
+       "28   The beds are very uncomfortable, the pillows a...   negative  \n",
+       "210  After we saw the lobby we had high expectation...   negative  \n",
+       "134  Lack of elevators. Only one per building. And ...   negative  \n",
+       "130  Breakfast in room attracted some expenses whic...   negative  \n",
+       "..                                                 ...        ...  \n",
+       "138  The location was really good, also the overall...   positive  \n",
+       "231  The room was very clean and there were some fr...   positive  \n",
+       "240  The hotel is just amazing! Every little detail...   positive  \n",
+       "129        Very close to centre of town and university   positive  \n",
+       "191                                      Location/vibe   positive  \n",
+       "\n",
+       "[100 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = hotel_reviews_data_english\n",
+    "\n",
+    "non_empty_poor = df[df['review_poor'].notna() & (df['review_poor'] != '')]\n",
+    "non_empty_great = df[df['review_great'].notna() & (df['review_great'] != '')]\n",
+    "\n",
+    "# Randomly sample 50 entries from each\n",
+    "sampled_poor = non_empty_poor.sample(50, random_state=42)  # Setting a random state for reproducibility\n",
+    "sampled_great = non_empty_great.sample(50, random_state=42)\n",
+    "\n",
+    "# Add a true_label column\n",
+    "sampled_poor['true_label'] = 'negative'\n",
+    "sampled_great['true_label'] = 'positive'\n",
+    "\n",
+    "# Concatenate the review text from both datasets\n",
+    "sampled_poor['review_text'] = sampled_poor['review_poor']\n",
+    "sampled_great['review_text'] = sampled_great['review_great']\n",
+    "\n",
+    "# Combine the samples\n",
+    "combined_samples = pd.concat([sampled_poor, sampled_great])\n",
+    "\n",
+    "# Create the final dataset with selected columns\n",
+    "reviews_small = combined_samples[['review_title', 'date_stay', 'review_text', 'true_label']]\n",
+    "\n",
+    "reviews_small"
    ]
   },
   {
@@ -1130,14 +1307,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "e:\\RUG\\Pie\\reviews_analytics\\review-analytics-env\\lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "c:\\Work\\Pie\\Pie\\reviews_analytics\\review-analytics-env\\lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
       "  from .autonotebook import tqdm as notebook_tqdm\n"
      ]
     }
