--- a/reviews_analytics/mistral_analysis.ipynb
+++ b/reviews_analytics/mistral_analysis.ipynb
@@ -13,29 +13,6 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "4mQjwWu4XzgG"
-      },
-      "source": [
-        "---\n",
-        "        \n",
-        "💡 **NOTE**: We will want to use a GPU to run both Llama2 as well as KeyBERT for this use case. In Google Colab, go to\n",
-        "**Runtime > Change runtime type > Hardware accelerator > GPU > GPU type > T4**.\n",
-        "\n",
-        "---"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "bJe5rT-ChHWe"
-      },
-      "source": [
-        "We will start by installing a number of packages that we are going to use throughout this example:"
-      ]
-    },
-    {
       "cell_type": "code",
       "execution_count": 1,
       "metadata": {
@@ -52,16 +29,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "45VuZTjdewKq"
-      },
-      "source": [
-        "\n",
-        "🔥 **TIP** 🔥: We are instaling `sentence-transformers` from its main branch since it has a fix for community detection which we will using in the last few use cases. We do the same for `transformers` since it does not yet support the Mistral architecture."
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "kH3tJIhbcnnb"
       },
       "source": [
@@ -71,23 +38,6 @@
         "<div>\n",
         "<img src=\"https://github.com/MaartenGr/KeyBERT/assets/25746895/aba167b1-93e6-44ab-a39b-4aab85c858c0\" width=\"850\"/>\n",
         "</div>\n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "rBAQ0iwO-09B"
-      },
-      "source": [
-        "# <img src=\"https://github.com/MaartenGr/KeyBERT/assets/25746895/5bb064ee-7545-48a5-8248-6f4afb8cfd9d\" width=\"30\"> **Loading the Model**\n",
-        "\n",
-        "In previous tutorials, we demonstrated how we could quantize the original model's weight to make it run without running into memory problems.\n",
-        "\n",
-        "Over the course of the last few months, [TheBloke](https://huggingface.co/TheBloke) has been working hard on doing the quantization for hundreds of models for us.\n",
-        "\n",
-        "This way, we can download the model directly which will speed things up quite a bit.\n",
-        "\n",
-        "We'll start with loading the model itself. We will ofload 50 layers to the GPU. This will reduce RAM usage and use VRAM instead. If you are running into memory errors, reducing this parameter (`gpu_layers`) might help!"
       ]
     },
     {
@@ -260,19 +210,6 @@
         "    gpu_layers=50,\n",
         "    hf=True\n",
         ")"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "nPn5wuu3BbJ5"
-      },
-      "source": [
-        "After having loaded the model itself, we want to create a 🤗 Transformers pipeline.\n",
-        "\n",
-        "The main benefit of doing so is that these pipelines are found in many tutorials and are often used in packages as backend. Thus far, `ctransformers` is not yet natively supported as much as `transformers`.\n",
-        "\n",
-        "Loading the Mistral tokenizer with `ctransformers` is not yet possible as the model is quite new. Instead, we use the tokenizer from the original repository instead."
       ]
     },
     {
@@ -3721,13 +3658,7 @@
       "source": [
         "# 🗝️ Keyword Extraction with `KeyLLM`\n",
         "\n",
-        "Keyword extraction with vanilla `KeyLLM` couldn't be more straightforward; we simply ask it to extract keywords from a document.\n",
-        "\n",
-        "<br>\n",
-        "<div>\n",
-        "<img src=\"https://github.com/MaartenGr/BERTopic/assets/25746895/bdcd7ae5-41d6-4687-828a-e7b245cef593\" width=\"650\"/>\n",
-        "</div>\n",
-        "\n"
+        "Keyword extraction with vanilla `KeyLLM` couldn't be more straightforward; we simply ask it to extract keywords from a document.\n"
       ]
     },
     {
